added components, header complete w/o functional links

--- a/semantic/src/theme.config
+++ b/semantic/src/theme.config
@@ -27,7 +27,7 @@
 @divider    : 'default';
 @flag       : 'default';
 @header     : 'cookr';
-@icon       : 'cookr';
+@icon       : 'default';
 @image      : 'default';
 @input      : 'default';
 @label      : 'default';
